tests/should_fail/cyclical.sm
initial foo
initial bar

foo -- keys [ q ] --> bar

# Can't get here from init, and can't reach final
zork -- keys [ a ] --> bork
bork -- keys [ a ] --> zork

foo --
  winc "foo"
--> pre
